--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <div>
         <a href="/" class="nav_logo text-white">
           <i class='bx bx-layer nav_logo-icon'></i>
-          <span class="nav_logo-name">InDigital XP</span>
+          <span class="nav_logo-name">Menu</span>
         </a>
         <div class="nav_list">
           <a routerLink="/reclamos" routerLinkActive="active" class="nav_link text-white">
