--- a/src/app/crear-reclamo/crear-reclamo.component.html
+++ b/src/app/crear-reclamo/crear-reclamo.component.html
@@ -1,1 +1,23 @@
-<p>crear-reclamo works!</p>
+<div>
+  <h1>Registro de Reclamos</h1>
+
+  <div>
+    <h3>Datos Personales</h3>
+    <div>
+      <p>Usuario</p>
+      <input src=""/>
+      
+    </div>
+    <div>
+        <p>Correo electronico</p>
+        <input/>
+
+
+    </div>
+
+    <div>
+        <button>Registrar</button>
+        <button>Cancelar</button>
+    </div>
+  </div>
+</div>
