--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,32 +9,39 @@
   </header>
 
   <!-- Sidebar -->
-  <div class="l-navbar bg-dark" id="nav-bar">
+  <div  class="l-navbar bg-dark" id="nav-bar">
     <nav class="nav flex-column">
+      
       <div>
-        <a href="/" class="nav_logo text-white">
+        <a *ngIf="showSidebar" href="/" class="nav_logo text-white">
           <i class='bx bx-layer nav_logo-icon'></i>
           <span class="nav_logo-name">Menu</span>
         </a>
         <div class="nav_list">
-          <a routerLink="/reclamos" routerLinkActive="active" class="nav_link text-white">
+          <a *ngIf="showSidebar" routerLink="/reclamos" routerLinkActive="active" class="nav_link text-white">
             <i class='bx bx-grid-alt nav_icon'></i>
             <span class="nav_name">Consultar reclamo</span>
 
 
             
           </a>
-          <a routerLink="/crear-reclamo" routerLinkActive="active" class="nav_link text-white">
+          <a *ngIf="showSidebar" routerLink="/crear-reclamo" routerLinkActive="active" class="nav_link text-white">
             <i class='bx bx-grid-alt nav_icon'></i>
             <span class="nav_name">Crear reclamo</span>
           </a>
-          <a routerLink="/resumen" routerLinkActive="active" class="nav_link text-white">
+
+          <a *ngIf="!showSidebar" routerLink="/login-user" routerLinkActive="active" class="nav_link text-white">
+            <i class='bx bx-grid-alt nav_icon'></i>
+            <span class="nav_name">Inicio de sesion</span>
+          </a>
+
+          <a *ngIf="showSidebar" routerLink="/resumen" routerLinkActive="active" class="nav_link text-white">
             <i class='bx bx-user nav_icon'></i>
             <span class="nav_name">Resumen</span>
           </a>
         </div>
       </div>
-      <a href="#" class="nav_link text-white">
+      <a href="#" class="nav_link text-white" (click)="logOut()">
         <i class='bx bx-log-out nav_icon'></i>
         <span class="nav_name">Cerrar sessión</span>
       </a>
@@ -43,7 +50,8 @@
   
   </div>
 
-  <div  class="container-fluid bg-light" id="main-content">
+  <div  class="bg-light" id="main-content">
+    <app-toast></app-toast>
     <router-outlet></router-outlet> 
   </div>
 
