--- a/src/app/lista-reclamos/lista-reclamos.component.html
+++ b/src/app/lista-reclamos/lista-reclamos.component.html
@@ -1,4 +1,5 @@
 <h2 class="mb-4 text-center">Lista de Reclamos</h2>
+<p-toast></p-toast>
 
 <div class="table-responsive">
   <table class="table table-striped table-bordered">
@@ -20,14 +21,14 @@
     <tbody *ngIf="!loading">
       <tr *ngFor="let reclamo of reclamos">
         <td class="text-center">{{ reclamo.id }}</td>
-        <td>{{ reclamo.empresa }}</td>
+        <td>{{ reclamo.empresadsc }}</td>
         <td>{{ reclamo.motivodsc }}</td>
         <td>{{ reclamo.estado }}</td>
         <td class="text-center">
           {{ reclamo.fechaRegistro | date : "dd/MM/yyyy HH:mm" }}
         </td>
         <td class="text-center">
-          <button (click)="seeMore(reclamo.id)">Ver</button>
+          <button (click)="showToast()">Ver</button>
         </td>
       </tr>
     </tbody>
